Fix SDK tests, docs, and benchmark settings